--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <%= link_to("Home", root_path) %> | <%= link_to("About", about_path) %> | <%= link_to("Rooms", rooms_path) %> | <%= link_to("Contact", contact_path)%> 
+    <p class="alert"><%= alert %></p>
+    <p class="notice"><%= notice %></p>
     <%= yield %>
   </body>
 </html>
