added room control for clients

--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -9,6 +9,8 @@
   <%= f.text_field :email %><br>
   <%= f.label :phone %> 
   <%= f.text_field :phone %><br>
+  <%= f.label :room %> 
+  <%= f.select(:room, ['Penthouse', 'Room 1', 'Room 2']) %> <br>
   <%= f.label :message %> 
   <%= f.text_area :message, :size => "60x12" %><br>
   <%= submit_tag "Create" %>
