--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= link_to("Home", root_path) %> | <%= link_to("About", about_path) %> | <%= link_to("Rooms", rooms_path) %> | <%= link_to("Contact", contact_path)%> 
+    <%= link_to("Home", root_path) %> | <%= link_to("About", about_path) %> | <%= link_to("Rooms", guestrooms_path) %> | <%= link_to("Contact", contact_path)%> 
     <p class="alert"><%= alert %></p>
     <p class="notice"><%= notice %></p>
     <%= yield %>
